--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -51,7 +51,7 @@
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:src="@android:drawable/ic_input_add"
-            android:tint="?attr/secondaryTextColor"
+            app:tint="?attr/secondaryTextColor"
             android:layout_marginBottom="16dp" />
 
         <TextView
