--- a/app/src/main/res/layout/item_category_management.xml
+++ b/app/src/main/res/layout/item_category_management.xml
@@ -29,7 +29,7 @@
                 android:src="@android:drawable/ic_menu_edit"
                 android:contentDescription="Edit category"
                 android:padding="6dp"
-                android:tint="@android:color/white"
+                app:tint="@android:color/white"
                 android:alpha="0.9"
                 android:layout_marginEnd="8dp" />
 
@@ -41,7 +41,7 @@
                 android:src="@android:drawable/ic_menu_delete"
                 android:contentDescription="Delete category"
                 android:padding="6dp"
-                android:tint="@android:color/white"
+                app:tint="@android:color/white"
                 android:alpha="0.8" />
 
         </LinearLayout>
