--- a/app/src/main/res/layout/item_category_selection.xml
+++ b/app/src/main/res/layout/item_category_selection.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="56dp"
     android:orientation="horizontal"
@@ -37,7 +38,7 @@
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:src="@android:drawable/btn_star_big_on"
-        android:tint="#FFD700"
+        app:tint="#FFD700"
         android:visibility="gone" />
 
 </LinearLayout>
