--- a/app/src/main/res/layout/item_expense.xml
+++ b/app/src/main/res/layout/item_expense.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="12dp">
+            android:padding="@dimen/spacing_medium">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -70,12 +70,12 @@
 
             <ImageButton
                 android:id="@+id/btnDeleteExpense"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
+                android:layout_width="@dimen/icon_large"
+                android:layout_height="@dimen/icon_large"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:src="@android:drawable/ic_menu_delete"
                 android:contentDescription="Delete expense"
-                android:padding="6dp"
+                android:padding="@dimen/spacing_tiny"
                 app:tint="?attr/secondaryTextColor" />
 
         </LinearLayout>
