--- a/app/src/main/res/layout/dialog_add_category.xml
+++ b/app/src/main/res/layout/dialog_add_category.xml
@@ -16,6 +16,7 @@
 
         <!-- Dialog Title -->
         <TextView
+            android:id="@+id/tvDialogTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Add Category"
