--- a/app/src/main/res/xml/data_extraction_rules.xml
+++ b/app/src/main/res/xml/data_extraction_rules.xml
@@ -1,19 +1,40 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-   Sample data extraction rules file; uncomment and customize as necessary.
-   See https://developer.android.com/about/versions/12/backup-restore#xml-changes
-   for details.
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+   Budget Deluminator data extraction rules for Android 12+
+   Controls what data can be extracted during device-to-device transfers and cloud backup
 -->
 <data-extraction-rules>
     <cloud-backup>
-        <!-- TODO: Use <include> and <exclude> to control what is backed up.
-        <include .../>
-        <exclude .../>
-        -->
+        <!-- Include user data and preferences -->
+        <include domain="sharedpref" path="budget_deluminator_prefs.xml"/>
+        <include domain="sharedpref" path="currency_prefs.xml"/>
+        <include domain="sharedpref" path="theme_prefs.xml"/>
+        <include domain="sharedpref" path="spending_roast_prefs.xml"/>
+        
+        <!-- Include database files -->
+        <include domain="database" path="budget_database"/>
+        <include domain="database" path="budget_database-shm"/>
+        <include domain="database" path="budget_database-wal"/>
+        
+        <!-- Exclude sensitive security data -->
+        <exclude domain="sharedpref" path="biometric_prefs.xml"/>
+        <exclude domain="sharedpref" path="background_permissions.xml"/>
     </cloud-backup>
-    <!--
+    
     <device-transfer>
-        <include .../>
-        <exclude .../>
+        <!-- Allow transfer of user data but exclude security settings -->
+        <include domain="sharedpref" path="budget_deluminator_prefs.xml"/>
+        <include domain="sharedpref" path="currency_prefs.xml"/>
+        <include domain="sharedpref" path="theme_prefs.xml"/>
+        <include domain="sharedpref" path="spending_roast_prefs.xml"/>
+        
+        <!-- Include database files for device transfer -->
+        <include domain="database" path="budget_database"/>
+        <include domain="database" path="budget_database-shm"/>
+        <include domain="database" path="budget_database-wal"/>
+        
+        <!-- Exclude security-related preferences -->
+        <exclude domain="sharedpref" path="biometric_prefs.xml"/>
+        <exclude domain="sharedpref" path="background_permissions.xml"/>
     </device-transfer>
-    -->
 </data-extraction-rules>
